bottom margin added to landing masthead to avoid rich text overlapping issue - https://zag.my.workfront.com/issue/622a65860271b2455c5380b8526e735a

--- a/MyLSB/wwwroot/scss/Pages/_Landing.scss
+++ b/MyLSB/wwwroot/scss/Pages/_Landing.scss
@@ -76,6 +76,7 @@
     &-masthead {
         background: $primary;
         padding-top: 2.5rem;
+        margin-bottom: 2.5rem;
         text-align: center;
 
         @include media-breakpoint-up(lg) {
